# raimadb-python

./: .gitignore  LICENSE  README.md  diff-cython.sh  pyproject.toml  setup.py
.devcontainer/: devcontainer.json  postCreate.sh
codegen/: genErrors_common.py  genErrors_python.py
examples/: README.md
examples/python01/: python01Example.py  python01Example_main.py  python01Test.py  test_python01.py
examples/python02/: python02Example.py  test_python02.py
examples/python03/: python03Example.py  test_python03.py
examples/python04/: python04Example.py  test_python04.py
examples/python05/: python05Example.py  test_python05.py
examples/python06/: python06Example.py  test_python06.py
examples/python07/: python07Example.py  test_python07.py
examples/python08/: python08Example.py  test_python08.py
examples/python09/: README.md
examples/python10/: README.md
examples/python11/: python11Example.py  test_python11.py
examples/python12/: README.md
examples/python13/: README.md
examples/python14/: README.md
examples/python15/: README.md
tests/: _helpers.py  test_basicOperations.py  test_basicTypes.py  test_cursorCompare.py  test_cursorDelete.py  test_cursorDerivation.py  test_cursorInspection.py  test_cursorNavigation.py  test_cursorSetMembership.py  test_dbapi_catalog.py  test_dbapi_close.py  test_dbapi_delete.py  test_dbapi_info.py  test_dbapi_options.py  test_dbapi_transactions.py  test_dbapi_utilities.py  test_handleManagement.py  test_keyNavigation.py  test_keyNavigationWithCompoundKey.py  test_nestedTransactions.py  test_set.py  test_setIterator.py
(+54 files in other folders)
